@@ -15,6 +15,8 @@ reporting problems and making useful suggestions.
   Scott H <stonecrest@gmail.com>
   * Bug# 2867
 
+  Laurent Meunier <meunier.laurent@laposte.net>
+  * Bug# 3062
 
 Translators (sorted by language):
 ----------------------------------
@@ -28,6 +30,9 @@ These people have translated xfce4-datetime-plugin to foreign languages.
 
   SZERVÁC Attila <sas@321.hu>
   * hu (Hungarian) translations
+
+  Piarres Beobide <pi@beobide.net>
+  * eu (Basque) translations
 
 Other contributors (sorted by name):
 ------------------------------------
