@@ -6,6 +6,10 @@
 
 	* fr.po: Added the French translation.
 
+2007-03-02  Remco den Breeje <remco@vioco.nl>
+
+	* uk.po: Added Ukrainian translations
+
 2007-01-13  Remco den Breeje <remco@vioco.nl>
 
 	* Updated name of pot-file
